classDiagram
    class Owner {
      +String name
      +List~String~ preferences
      +Constraint constraint
      +List~Pet~ pets
      +addPet(pet: Pet)
      +getAllDueTasks(onDate: date) List~CareTask~
      +getTasksForPet(petName: String) List~CareTask~
    }

    class Constraint {
      +int availableMinutes
      +List~String~ blockedTimes
      +int maxTasksPerDay
      +List~String~ preferenceRules
    }

    class Pet {
      +String name
      +String species
      +int age
      +String healthNotes
      +List~CareTask~ tasks
      +addTask(task: CareTask)
      +getDueTasks(onDate: date) List~CareTask~
      +getCompletedTasks(onDate: date) List~CareTask~
      +getPendingTasks(onDate: date) List~CareTask~
    }

    class CareTask {
      +String taskType
      +int durationMinutes
      +String priority
      +String frequency
      +String timeWindow
      +bool required
      +String notes
      +date lastCompletedOn
      +int completionsToday
      +date nextDueOn
      +isDue(onDate: date) bool
      +markCompleted(onDate: date)
    }

    class DailyPlan {
      +date planDate
      +List~CareTask~ scheduledTasks
      +List~Tuple~ deferredTasks
      +List~String~ scheduleBlocks
      +List~String~ conflicts
      +String rationale
      +totalMinutesUsed() int
      +addScheduledTask(task: CareTask)
      +addDeferredTask(task: CareTask, reason: String)
      +explainChoices() String
    }

    class Planner {
      +generatePlan(owner: Owner, onDate: date) DailyPlan
      +rankTasks(tasks: List~CareTask~, constraint: Constraint) List~CareTask~
      +fitToTimeBudget(tasks: List~CareTask~, constraint: Constraint) List~CareTask~
      +sortByTime(tasks: List~CareTask~) List~CareTask~
      +filterTasks(tasks, pet, completedOn, pendingOn, taskType) List~CareTask~
      +detectConflicts(plan: DailyPlan, constraint: Constraint, owner: Owner) List~String~
    }

    Owner "1" *-- "1" Constraint : governs
    Owner "1" o-- "1..*" Pet : owns
    Pet "1" o-- "0..*" CareTask : needs
    Planner ..> Owner : reads
    Planner ..> DailyPlan : builds
